--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "express": "4.17.1",
     "joi": "^17.4.2",
     "mongoose": "^6.0.13",
-    "morgan": "1.10.0"
+    "morgan": "1.10.0",
+    "multer": "^1.4.4",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "^7.19.0",
